# deet

./: .gitignore  Cargo.toml  README.txt
src/: changelog.rs  cli_util.rs  cmd_util.rs  hex.rs  main.rs  manifest.rs  output.rs  path_util.rs
src/leet/: color.rs  error.rs  indent.rs  inner.rs  mod.rs  scope.rs
src/maniflect/: mod.rs
src/util/: cli.rs  cmd.rs  display.rs  git.rs  hex.rs  mod.rs  path.rs
