[package]
name = "deet"
version = "0.1.0"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
edition = "2021"

[dependencies]
failure = "0.1.6"
unicode-segmentation = "1.6.0"
rand = "0.7.3"
regex = "1.3.3"
toml_edit = "0.1.5"
semver = "0.9.0"
log = "0.4.8"
lazy_static = "1.4.0"
pulldown-cmark = "0.7.0"
